@@ -1,7 +1,7 @@
 //
 // AtomicCounter.cpp
 //
-// $Id: //poco/1.4/Foundation/src/AtomicCounter.cpp#1 $
+// $Id: //poco/1.4/Foundation/src/AtomicCounter.cpp#2 $
 //
 // Library: Foundation
 // Package: Core
@@ -118,6 +118,47 @@ AtomicCounter& AtomicCounter::operator = (const AtomicCounter& counter)
 AtomicCounter& AtomicCounter::operator = (AtomicCounter::ValueType value)
 {
 	_counter = value;
+	return *this;
+}
+
+
+#elif defined(POCO_HAVE_GCC_ATOMICS)
+//
+// GCC 4.1+ atomic builtins.
+//
+AtomicCounter::AtomicCounter():
+	_counter(0)
+{
+}
+
+	
+AtomicCounter::AtomicCounter(AtomicCounter::ValueType initialValue):
+	_counter(initialValue)
+{
+}
+
+
+AtomicCounter::AtomicCounter(const AtomicCounter& counter):
+	_counter(counter.value())
+{
+}
+
+
+AtomicCounter::~AtomicCounter()
+{
+}
+
+
+AtomicCounter& AtomicCounter::operator = (const AtomicCounter& counter)
+{
+	__sync_lock_test_and_set(&_counter, counter.value());
+	return *this;
+}
+
+	
+AtomicCounter& AtomicCounter::operator = (AtomicCounter::ValueType value)
+{
+	__sync_lock_test_and_set(&_counter, value);
 	return *this;
 }
 
